# hypertorch

./: .gitignore  AGENTS.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml  zensical.toml
.github/: dependabot.yml  labeler.yaml  mkdocs.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/hooks/: .pre-commit-config.yaml
.github/workflows/: branch.yaml  ci.yaml  coverage.yaml  daily_ci.yaml  docs.yaml  issues.yaml  label.yaml  management.yaml  pull_requests.yaml  release.yaml  security.yaml  weekly_ci.yaml
agents/: SKILLS.md
agents/references/: package.md  testing.md  type-system.md
benchmark/: bench.py  bench.sh  bench_hlp.py  bench_hlp_togheter.py  bench_nc.py  bench_nc_togheter.py  common.py  common_hlp.py  common_nc.py  produce.py
custom_logs/custom_logger_example/: comparison_table.json
docs/: contributing.md  index.md
docs/agents/references/: package.md  standard-lib.md  testing.md  type-system.md
docs/api/: data.md  hlp.md  hyperlink_prediction.md  models.md  nc.md  nn.md  node_classification.md  reference.md  train.md  types.md  utils.md
docs/assets/: deprecated_design.excalidraw
docs/development/: ci.md  contribution.md  development.md  internals.md  makefile.md  policies.md
docs/getting-started/: datasets.md  installation.md  overview.md  package.md  tutorials.md
docs/stylesheets/: extra.css
docs/user-guide/: 1-minute-to-hyperbench.md  1-minute-to-hypertorch.md  benchmarking.md  hif-integration.md  loggers.md  models.md  overview.md  tensorboard.md  training.md
dummy_dir/comparison/: results.md
examples/: common_neighbors.py  early_stopping.py  external_dataset.py  gcn.py  hgnn.py  hgnnp.py  hnhn.py  hyperedge_enricher.py  hypergcn.py  mlp_common_neighbors.py  negative_sampler.py  nhp.py  node2vec.py  node2vecgcn.py  node2vecslp.py  node_enricher.py  pipeline.py  villain.py
examples/dataset/: load_dataset_from_external_source.py
examples/enrichment/: hyperedge_enricher.py  node_enricher.py
examples/hyperlink_prediction/: common_neighbors.py  early_stopping.py  gcn.py  hgnn.py  hgnnp.py  hnhn.py  hypergcn.py  mlp.py  nhp.py  node2vec.py  node2vecgcn.py  node2vecslp.py  villain.py
examples/logging/: custom_logger.py
examples/node_classification/: common_neighbors.py  gcn.py  hgnn.py  hgnnp.py  hnhn.py  hypergcn.py  mlp.py  node2vec.py  node2vecgcn.py  node2vecslp.py  villain.py
examples/sampling/: custom_negative_sampler.py  negative_sampler.py
examples/splitting/: custom_splitter.py
examples/train/: multi_model_training.py  train_custom_lightning_model.py  train_custom_pytorch_model.py  train_with_auto_tensorboard_start.py  train_with_checkpoints.py  train_with_custom_logger.py  train_with_datamodule.py  train_with_early_stopping.py
hyperbench/: __init__.py
hyperbench/data/: __init__.py  dataset.py  enricher.py  hif.py  loader.py  negative_sampler.py  negative_sampling_scheduler.py  sampler.py  sampling.py  splitter.py  supported_datasets.py
hyperbench/hlp/: __init__.py  common.py  common_neighbors_hlp.py  gcn_hlp.py  hgnn_hlp.py  hgnnp_hlp.py  hlp.py  hnhn_hlp.py  hypergcn_hlp.py  mlp_hlp.py  nhp_hlp.py  node2vec_common.py  node2vec_hlp.py  node2vecgcn_hlp.py  node2vecslp_hlp.py  villain_hlp.py
hyperbench/integration_tests/: __init__.py  common.py
hyperbench/integration_tests/data/: enricher_integration_test.py  supported_dataset_integration_test.py  supported_datasets_integration_test.py
hyperbench/integration_tests/hlp/: gcn_test.py  (+26 more)
hyperbench/models/: __init__.py  common_neighbors.py  gcn.py  hgnn.py  hgnnp.py  hnhn.py  hypergcn.py  mlp.py  nhp.py  node2vec.py  villain.py
hyperbench/nn/: __init__.py  aggregator.py  common.py  conv.py  enricher.py  loss.py  scorer.py
hyperbench/tests/: __init__.py  dependency_exports_test.py
hyperbench/train/: __init__.py  latex_logger.py  markdown_logger.py  negative_sampler.py  negative_sampling_scheduler.py  trainer.py
hyperbench/types/: __init__.py  graph.py  hdata.py  hypergraph.py  model.py
hyperbench/utils/: __init__.py  data_utils.py  file_utils.py  hif_utils.py  nn_utils.py  node_utils.py  random_utils.py  sparse_utils.py  url_utils.py
hypertorch/: __init__.py
hypertorch/data/: __init__.py  dataset.py  enricher.py  hif.py  loader.py  negative_sampler.py  negative_sampling_scheduler.py  sampler.py  splitter.py  supported_datasets.py
hypertorch/hlp/: __init__.py  common.py  common_neighbors_hlp.py  gcn_hlp.py  hgnn_hlp.py  hgnnp_hlp.py  hnhn_hlp.py  hypergcn_hlp.py  mlp_hlp.py  nhp_hlp.py  node2vec_common.py  node2vec_hlp.py  node2vecgcn_hlp.py  node2vecslp_hlp.py  villain_hlp.py
hypertorch/hyperlink_prediction/: __init__.py  common.py  common_neighbors_hlp.py  gcn_hlp.py  hgnn_hlp.py  hgnnp_hlp.py  hnhn_hlp.py  hypergcn_hlp.py  mlp_hlp.py  nhp_hlp.py  node2vec_hlp.py  node2vecgcn_hlp.py  villain_hlp.py
hypertorch/integration_tests/: __init__.py  common.py
hypertorch/models/: __init__.py  common_neighbors.py  gcn.py  hgnn.py  hgnnp.py  hnhn.py  hypergcn.py  mlp.py  nhp.py  node2vec.py  node2vec_common.py  villain.py
hypertorch/nc/: __init__.py  common.py  common_neighbors_nc.py  gcn_nc.py  hgnn_nc.py  hgnnp_nc.py  hnhn_nc.py  hypergcn_nc.py  mlp_nc.py  node2vec_nc.py  node2vecgcn_nc.py  node2vecslp_nc.py  villain_nc.py
hypertorch/nn/: __init__.py  aggregator.py  conv.py  scorer.py
hypertorch/node_classification/: __init__.py  common.py  common_neighbors_nc.py  gcn_nc.py  hgnn_nc.py  hgnnp_nc.py  hnhn_nc.py  hypergcn_nc.py  mlp_nc.py  node2vec_nc.py  node2vecgcn_nc.py  villain_nc.py
hypertorch/train/: __init__.py  latex_logger.py  logger.py  markdown_logger.py  trainer.py
hypertorch/types/: __init__.py  graph.py  hdata.py  hypergraph.py  model.py  task.py
hypertorch/utils/: __init__.py  data_utils.py  file_utils.py  hif_utils.py  nn_utils.py  node_utils.py
scripts/: check_branch_naming.sh  count_loc.sh  datasets.py  run_examples.sh  validate_docstrings.py  weekly_run.sh
(+115 files in other folders)
