[project]
name = "hyperbench"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastjsonschema>=2.21.2",
    "lightning>=2.5.5",
    "numpy>=1.240",
    "requests>=2.32.5",
    "torch>=2.9.1",
    "zstandard>=0.25.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["hyperbench"]

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.24.0",
    "pre-commit>=4.5.1",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.13",
]

[tool.pytest.ini_options]
addopts = [
    "--color=yes",
    "--verbose",
    "--tb=short",
    "--strict-markers",
]
testpaths = ["hyperbench/tests"]

[tool.coverage.run]
source = ["hyperbench"]
branch = true
omit = [
    "hyperbench/tests/*",
    "hyperbench/nn/*",
    "hyperbench/models/*",
    "hyperbench/hlp/*"
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.ruff]
line-length = 100
